break-all --> break-word for better experience

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,16 +61,16 @@
       $("#main-ow").css("color", "rgb(157, 94, 189)");
 
       $("span").children("span").css({ "max-width": "100%" });
-      $("span").children("a").css({ "word-break": "break-all" });
-      $("li").children("a").css({ "word-break": "break-all" });
-      $("p").children("a").css({ "word-break": "break-all" });
+      $("span").children("a").css({ "word-break": "break-word" });
+      $("li").children("a").css({ "word-break": "break-word" });
+      $("p").children("a").css({ "word-break": "break-word" });
       $("span").css({ "max-width": "100%" });
       $("table").removeClass('MsoNormalTable').addClass('table-responsive');
       $("table").css({ "width": "100%" });
-      $("div").children("font").css({ "word-break": "break-all" });
-      $("span").children("font").css({ "word-break": "break-all" });
+      $("div").children("font").css({ "word-break": "break-word" });
+      $("span").children("font").css({ "word-break": "break-word" });
       $("span").children("img").css({ "max-width": "100%" });
-      $("p").children("span").css({ "word-break": "break-all" });
+      $("p").children("span").css({ "word-break": "break-word" });
 
     });
 
