--- a/templates/home/archive.html
+++ b/templates/home/archive.html
@@ -4,235 +4,7 @@
 
 {% block body %}
 
-
-<div class="row" style="height: auto !important; margin-right: 10px; margin-left: 10px; margin-top: 10px;">
-
-
-  <div id="sidebar" style="height: auto !important;" itemscope="itemscope" itemtype="http://schema.org/WPSideBar"
-    style="height: auto !important;">
-    <div class="slidebar ty-trigger section" id="slidebar" style="height: auto !important; box-shadow: 4px 4px 4px rgb(225, 182, 246);">
-      <div class="widget LinkList" data-version="1" id="LinkList1">
-        <h2 style="color: #556B2F; padding:5px;">
-
-        </h2>
-        <div class="widget-content">
-            <div id="srch1">
-                <form method="get" style="margin-left: 0.5rem!important;" action="/search" class="form-inline my-2 my-lg-0 mx-3">
-                <input class="form-control mr-sm-1" type="search" placeholder="Search Article" aria-label="Search" name="query"
-                    id="query" style="width:55%">
-                <button class="btn btn-outline-success my-2 mr-sm-1" type="submit">Search</button>
-                </form>
-            </div>
-
-            <ul style="color: rgb(157, 94, 189);">
-
-
-                <li><a href="/">
-                        <p style=" color: rgb(157, 94, 189);">
-                            <p style=" color: rgb(157, 94, 189);">HOME</p>
-                        </p>
-                    </a></li>
-                <li><a href="/blog" style="color: rgb(157, 94, 189);">
-                        <p>
-                            <p style=" color: rgb(157, 94, 189);">BLOGS</p>
-                        </p>
-                    </a></li>
-                <li><a href="/#topic" style="color: rgb(157, 94, 189);">
-                        <p>
-                            <p style=" color: rgb(157, 94, 189);">TOPICS</p>
-                        </p>
-                    </a></li>
-                <li><a href="/archive" style="color: rgb(157, 94, 189);">
-                        <p>
-                            <p style=" color: rgb(157, 94, 189);">ARCHIVE</p>
-                        </p>
-                    </a></li>
-                <li><a href="/about" style="color: rgb(157, 94, 189);">
-                        <p>
-                            <p style=" color: rgb(157, 94, 189);">ABOUT</p>
-                        </p>
-                    </a></li>
-                <li><a href="/contact" style="color: rgb(157, 94, 189);">
-                        <p>
-                            <p style=" color: rgb(157, 94, 189);">Contact US</p>
-                        </p>
-                    </a></li>
-                <li><a href="/books" style="color: rgb(157, 94, 189);">
-                        <p>
-                            <p style=" color: rgb(157, 94, 189);">Magazine Corner</p>
-                        </p>
-                    </a></li>
-                {% if not user.is_authenticated %}
-                <li>
-                    <a class="dropdown-item" data-toggle="modal" data-target="#signUPModal"
-                        style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
-                        <p>
-                            <p style=" color: rgb(157, 94, 189);">SignUP</p>
-                        </p>
-                    </a>
-                </li>
-                {% endif %}
-                {% if not user.is_authenticated %}
-                <li>
-                    <a class="dropdown-item" data-toggle="modal" data-target="#loginModal"
-                        style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
-                        <p>
-                            <p style=" color: rgb(157, 94, 189);">LogIN</p>
-                        </p>
-                    </a>
-                </li>
-                {% endif %}
-                {% if user.is_authenticated %}
-                <li>
-                    <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal"
-                        style="color: rgb(157, 94, 189); width:70%; padding: 0px; cursor: pointer;">
-                        <p>
-                            <p style=" color: rgb(157, 94, 189);">LogOUT</p>
-                        </p>
-                    </a>
-                </li>
-                {% endif %}
-                <div>
-                    <a style="color: rgb(157, 94, 189); padding-left: 10px; padding-right: 20px;"
-                        href="https://www.facebook.com/SunniHanfiOrganisationMumbai/"><i
-                            class="fab fa-facebook-square fa-2x"></i></a>
-                    <a style="color: rgb(157, 94, 189); padding-left: 10px; padding-right: 20px;"
-                        href="mailto: imran.shaikh16230@gmail.com" title="email"><i
-                            class="fas fa-envelope fa-2x"></i></a>
-                    <a style="color:rgb(157, 94, 189); padding-left: 10px;padding-right:20px;"
-                        href="https://www.youtube.com/user/786SHO/videos" title="youtube"><i
-                            class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
-                    </a>
-                </div>
-
-
-
-
-
-            </ul>
-            <div class="clear"></div>
-            <span class="widget-item-control">
-                <span class="item-control blog-admin">
-
-                </span>
-            </span>
-            <div class="clear"></div>
-        </div>
-
-
-    </div>
-
-    </div>
-    <div id="rollbar" class="col col-lg-2" style="margin-top: 15px; z-index: 1; width: 90%;">
-      <div class="container">
-        <div class="actionon">
-          <div id="spanMenu">
-            <span style="padding-top:8px;">Menu</span>
-          </div>
-        </div>
-        <div class="actionoff">
-          <div id="spanMenuoff">
-            <span style="padding-top:8px;">Menu</span>
-          </div>
-        </div>
-        <script type="text/javascript">
-          $('.actionoff').hide();
-          $(document).ready(function () {
-            $("#spanMenu").click(function () {
-              $('#slidebar').show();
-              $('.actionon').hide();
-              $('.actionoff').show();
-
-
-            });
-          });
-          $(document).ready(function () {
-            $("#spanMenuoff").click(function () {
-              $('#slidebar').hide();
-              $('.actionon').show();
-              $('.actionoff').hide();
-
-            });
-          });
-
-        </script>
-
-        <style>
-                    .actionon {
-                        /* position: fixed; */
-                        bottom: 50px;
-                        left: 50px;
-                        width: 50px;
-                        height: 50px;
-                        background: snow;
-                        color: #660099;
-                        border-radius: 100%;
-                        cursor: pointer;
-                        font-family: cursive;
-                        box-shadow: 0 10px 5px  rgb(225, 182, 246);
-                    }
-
-                    .actionon span {
-                        position: relative;
-                        width: 100%;
-                        height: 100%;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        color: #660099;
-                        font-size: 1.2em;
-                        transition: 0.3s ease-in-out;
-                    }
-
-                    .actionon:active span {
-                        transform: rotate(75deg);
-
-                    }
-
-                    .actionoff {
-                        /* position: fixed; */
-                        bottom: 50px;
-                        left: 50px;
-                        width: 50px;
-                        height: 50px;
-                        background: snow;
-                        color: #660099;
-                        border-radius: 100%;
-                        cursor: pointer;
-                        font-family: cursive;
-                        box-shadow: 0 10px 5px  rgb(225, 182, 246);
-                    }
-
-                    .actionoff span {
-                        position: relative;
-                        width: 100%;
-                        height: 100%;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        color: #660099;
-                        font-size: 1.2em;
-                        transition: 0.3s ease-in-out;
-                    }
-
-                    .actionoff:active span {
-                        transform: rotate(75deg);
-
-                    }
-                </style>
-      </div>
-    </div>
-    <div id="srch" style="margin-top: 20px;">
-      <form method="get" style="margin-left: 0.5rem!important;" action="/search" class="form-inline my-2 my-lg-0 mx-3">
-      <input class="form-control mr-sm-1" type="search" placeholder="Search Article" aria-label="Search" name="query"
-          id="query" style="width:62%">
-      <button class="btn btn-outline-success my-2 mr-sm-1" style="margin-left: 3px;" type="submit">Search</button>
-      </form>
-    </div>
-
-    <div style="clear:both"></div>
-  </div>
-  <div class="container" style=" margin-bottom: 200px;" id="wrapper">
+  <div class="container" style=" margin-bottom: 200px;" id="wrapper3">
     <!-- <div class="col p-4 d-flex flex-column position-static"> -->
       <h2 style="padding-top: 40px; padding-bottom: 40px; color: rgb(157, 94, 189);">  <span style="box-shadow: 3px 3px 3px rgb(225, 182, 246); ">ARCHIVE PAGE : </span></h2>
     <div class="timeline">
@@ -864,207 +636,4 @@
     }
   </style>
 
-  <!-- media - manupilation -->
-
-  <style>
-    @media only screen and (min-width: 1000px) {
-
-      #wrapper,
-      #sidebar {
-        float: none;
-        clear: both;
-        margin: 0;
-      }
-    }
-
-    @media only screen and (min-width: 1100px) {
-      #sidebar {
-        padding-top: 20px;
-        width: 30%;
-        float: right;
-        margin-right: 20px;
-        margin-bottom: 130px;
-      }
-    }
-
-
-    @media only screen and (min-width: 600px) and (max-width: 1090px) {
-
-      #wrapper {
-        max-width: 1090px;
-      }
-    }
-
-
-    @media only screen and (min-width: 1200px) and (max-width: 1299px) {
-
-      #wrapper {
-        max-width: 850px;
-      }
-    }
-
-    @media only screen and (min-width: 1200px) and (max-width: 1299px) {
-      #sidebar {
-        max-width: 270px;
-
-      }
-    }
-
-    @media only screen and (min-width: 1300px) and (max-width: 1399px) {
-
-      #wrapper {
-        max-width: 950px;
-      }
-    }
-
-    @media only screen and (min-width: 1300px) and (max-width: 1399px) {
-      #sidebar {
-        max-width: 300px;
-
-      }
-    }
-
-    @media only screen and (min-width: 1400px) and (max-width: 1477px) {
-
-      #wrapper {
-        max-width: 980px;
-      }
-    }
-
-    @media only screen and (min-width: 1400px) and (max-width: 1477px) {
-      #sidebar {
-        max-width: 320px;
-
-      }
-    }
-
-    @media only screen and (min-width: 1480px) {
-
-      #wrapper {
-        max-width: 1050px;
-      }
-    }
-
-    @media only screen and (min-width: 1480px) {
-      #sidebar {
-        max-width: 330px;
-
-      }
-    }
-
-    @media only screen and (min-width: 1005px) {
-
-      #wrapper {
-        /* max-width: 0%; */
-        padding: 0px;
-        width: 70%;
-        float: left;
-      }
-    }
-
-    @media only screen and (min-width: 300px) and (max-width: 1023px) {
-      #sidebar {
-        /* padding-top: 5px; */
-        padding: 10px;
-      }
-    }
-
-    @media only screen and (min-width: 1100px) {
-      #sidebar {
-        padding-top: 25px;
-        padding-right: 3px;
-        padding-left: 15px;
-        width: 30%;
-        float: right;
-        /* padding: 10px; */
-      }
-    }
-
-    @media only screen and (min-width: 1100px) and (max-width: 1199px) {
-
-      #wrapper {
-        max-width: 800px;
-      }
-    }
-
-    @media only screen and (min-width: 1100px) and (max-width: 1199px) {
-      #sidebar {
-        max-width: 270px;
-
-      }
-    }
-
-    @media only screen and (min-width: 400px) and (max-width: 1090px) {
-      #sidebar {
-        max-width: 330px;
-
-      }
-    }
-
-    @media only screen and (min-width: 250px) {
-      #LinkList1 {
-            border: 0.6px solid rgb(157, 94, 189);
-            border-radius: 3px;
-            background-color: snow;
-        }
-    }
-
-    @media only screen and (min-width: 1005px) {
-
-      #wrapper {
-        /* max-width: 0%; */
-        padding: 0px;
-        width: 70%;
-        float: left;
-      }
-    }
-
-    @media only screen and (min-width: 300px) {
-
-      #wrapper {
-        /* max-width: 0%; */
-        padding: 5px;
-      }
-    }
-
-    @media only screen and (min-width: 319px) and (max-width: 700px) {
-
-      #wrapper {
-        width: 98%;
-
-      }
-    }
-
-    /* padding-right: 10px; padding-left: 50px; padding-top:25px */
-    @media only screen and (min-width: 300px) {
-      #wrapper {
-        width: 98%;
-      }
-    }
-
-
-    @media only screen and (min-width: 300px) and (max-width: 1000px) {
-      #sidebar {
-        padding-top: 0px;
-        /* width: 0%; */
-      }
-    }
-
-
-    #wrapper {
-      float: left;
-      /* max-width: 1000px; */
-    }
-
-    *,
-    ::after,
-    ::before {
-      box-sizing: content-box;
-    }
-  </style>
-
-
-</div>
-
 {% endblock body %}
-
